# dailyTools

./: .gitignore  README.md  trae_new_task.py  verify_workflow.py
cicd-workbench/frontend/src-tauri/: Cargo.toml  tauri.conf.json
cicd-workbench/frontend/src-tauri/src/: main.rs
code-quality-toolkit/: pyproject.toml  requirements.txt  setup.py
code-quality-toolkit/code_quality_toolkit/: __init__.py  __version__.py  cli.py
code-quality-toolkit/code_quality_toolkit/code_review/: __init__.py  analyzer.py  bug_detector.py  code_smell_detector.py  git_integration.py  report_generator.py  security_scanner.py
code-quality-toolkit/code_quality_toolkit/dependency_analyzer/: __init__.py  breaking_change_detector.py  impact_analyzer.py  interactive_updater.py  update_suggestion.py  version_checker.py
code-quality-toolkit/code_quality_toolkit/utils/: __init__.py  config.py  output_formatter.py
data-processing-search-libs/core-search-engine/: Cargo.toml
data-processing-search-libs/core-search-engine/src/: lib.rs
data-security-lib/: Cargo.toml
data-security-lib/examples/: data_processing_example.rs  http_client_example.rs
data-security-lib/src/: lib.rs
data-security-lib/src/data_processing/: missing_values.rs  mod.rs  outliers.rs  type_conversion.rs  types.rs  validation.rs
data-security-lib/src/http_client/: client.rs  interceptors.rs  mod.rs  types.rs
data-security-lib/tests/: data_processing_tests.rs
data-sync-backup-toolkit/: Cargo.toml
data-sync-backup-toolkit/src/: lib.rs
data-sync-backup-toolkit/src/backup/: backup_engine.rs  backup_manager.rs  mod.rs  restore_engine.rs  snapshot.rs
data-sync-backup-toolkit/src/config_sync/: config_manager.rs  conflict_resolver.rs  mod.rs  sync_engine.rs
data-sync-backup-toolkit/src/encryption/: aes.rs  chacha.rs  key_management.rs  mod.rs
data-sync-backup-toolkit/src/storage/: local.rs  mod.rs  s3.rs  sftp.rs
data-sync-backup-toolkit/src/utils/: compression.rs  diff.rs  hashing.rs  mod.rs  path.rs  version_control.rs
distributed-debug-console/src-tauri/: Cargo.toml  tauri.conf.json
distributed-debug-console/src-tauri/src/: logging.rs  main.rs  tracing.rs  types.rs  utils.rs
doc-code-security-toolkit/: pyproject.toml
doc-code-security-toolkit/doc_code_security_toolkit/: __init__.py
doc-code-security-toolkit/doc_code_security_toolkit/cli/: __init__.py  main.py
doc-code-security-toolkit/doc_code_security_toolkit/config/: __init__.py  settings.py
doc-code-security-toolkit/doc_code_security_toolkit/document_processing/: __init__.py  converters.py  processors.py  readers.py  workflows.py
doc-code-security-toolkit/doc_code_security_toolkit/llm/: __init__.py  client.py
doc-code-security-toolkit/doc_code_security_toolkit/security_audit/: __init__.py  analyzer.py  reporter.py  rules.py  scanner.py
edge-face-detection-lib/src/rust/: Cargo.toml
edge-face-detection-lib/src/rust/src/: lib.rs
high-perf-media-logging-libs/: Cargo.toml
high-perf-media-logging-libs/crates/async-logger/: Cargo.toml
high-perf-media-logging-libs/crates/async-logger/src/: config.rs  error.rs  filter.rs  formatter.rs  level.rs  lib.rs  logger.rs  record.rs  writer.rs
high-perf-media-logging-libs/crates/lockfree/: Cargo.toml
high-perf-media-logging-libs/crates/lockfree/src/: error.rs  lib.rs  queue.rs  sync.rs
high-perf-media-logging-libs/crates/media-decoder/: Cargo.toml
high-perf-media-logging-libs/crates/media-decoder/src/: config.rs  decoder.rs  error.rs  format.rs  frame.rs  lib.rs  platform.rs  texture.rs
local-fulltext-search-lib/core/: Cargo.toml
local-fulltext-search-lib/core/src/: document.rs  index.rs  lib.rs  query_parser.rs  ranking.rs  tokenizer.rs  wasm.rs
local-password-manager/src-tauri/: Cargo.toml  tauri.conf.json
local-password-manager/src-tauri/src/: crypto.rs  database.rs  main.rs  models.rs  password_generator.rs  security_audit.rs
log-analysis-center/log-stream-processor/: Cargo.toml
log-analysis-center/log-stream-processor/src/: main.rs
log-analysis-center/log-stream-processor/src/alerts/: email.rs  mod.rs  webhook.rs
log-analysis-center/log-stream-processor/src/api/: handlers.rs  routes.rs
log-analysis-center/log-stream-processor/src/engine/: alert_manager.rs  mod.rs  rule_engine.rs
log-analysis-center/log-stream-processor/src/parsers/: grok.rs  mod.rs  regex.rs
network-data-access-libs/http-client/: Cargo.toml
network-data-access-libs/http-client/src/: client.rs  error.rs  ffi.rs  header.rs  interceptor.rs  lib.rs  request.rs  response.rs  url.rs
network-protocol-suite/packet-sniffer/: Cargo.toml
network-protocol-suite/packet-sniffer/src/: database.rs  error.rs  lib.rs  models.rs  protocols.rs  sniffer.rs
network-protocol-suite/session-analyzer/: Cargo.toml
network-protocol-suite/session-analyzer/src/: error.rs  file_extractor.rs  hex_viewer.rs  http_parser.rs  lib.rs  models.rs  tcp_reassembly.rs  websocket_parser.rs
network-protocol-suite/src-tauri/: Cargo.toml  tauri.conf.json
network-protocol-suite/src-tauri/src/: main.rs
personal-productivity-suite/src-tauri/: Cargo.toml  tauri.conf.json
personal-productivity-suite/src-tauri/src/: db.rs  main.rs
personal-productivity-text-tools/src-tauri/: Cargo.toml  tauri.conf.json
personal-productivity-text-tools/src-tauri/src/: db.rs  main.rs
quantum-sim-lab/src-tauri/: Cargo.toml  tauri.conf.json
quantum-sim-lab/src-tauri/src/: lib.rs  main.rs
security-penetration-suite/src-tauri/: Cargo.toml  tauri.conf.json
security-penetration-suite/src-tauri/src/: main.rs
security-regex-toolkit/src-tauri/: Cargo.toml  tauri.conf.json
security-regex-toolkit/src-tauri/src/: database.rs  main.rs  models.rs  password_generator.rs  regex_library.rs  security_audit.rs
system-security-monitor/src-tauri/: Cargo.toml  tauri.conf.json
system-security-monitor/src-tauri/src/: lib.rs  main.rs
terminal-info-toolkit/: Cargo.toml
terminal-info-toolkit/src/: main.rs  tree.rs  weather.rs
video-to-gif-converter/src-tauri/: Cargo.toml  tauri.conf.json
video-to-gif-converter/src-tauri/src/: db.rs  main.rs
(+3530 files in other folders)
