[package]
name = "data-security-lib"
version = "0.1.0"
edition = "2021"
description = "一个内存安全的数据处理与安全库，包含 HTTP 客户端和数据校验功能"
authors = ["Trae AI"]
license = "MIT"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"] }

# 类型安全的 URL 和 Header
url = "2.5"
http = "0.2"

# 数据处理
csv = "1.2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据校验
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# 数学计算（用于异常值检测）
statrs = "0.16"
approx = "0.5"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
# 测试依赖
tokio-test = "0.4"
mockito = "1.0"
