[package]
name = "data-sync-backup-toolkit"
version = "0.1.0"
edition = "2021"
description = "数据同步与备份工具集 - 配置文件同步和系统备份恢复工具"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[bin]]
name = "dsbt"
path = "src/bin/dsbt.rs"

[lib]
name = "dsbt_core"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
tempfile = "3.8"
filetime = "0.2"
walkdir = "2.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"

# 加密依赖
ring = "0.17"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"

# 压缩依赖
flate2 = { version = "1.0", features = ["zlib"] }
zstd = "0.13"

# 存储后端依赖
aws-sdk-s3 = { version = "1.0", features = ["rustls"], default-features = false, optional = true }
aws-config = { version = "1.0", optional = true }
thrussh = { version = "0.40", optional = true }
thrussh-keys = { version = "0.20", optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }

# 差异同步依赖
diffy = "0.3"
ignore = "0.4"

# 模式匹配
glob = "0.3"

[features]
default = ["local"]
local = []
s3 = ["aws-sdk-s3", "aws-config", "tokio"]
sftp = ["thrussh", "thrussh-keys", "tokio"]
all-backends = ["s3", "sftp"]

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
