[workspace]
resolver = "2"
members = [
    "crates/async-logger",
    "crates/media-decoder",
    "crates/lockfree",
]

[workspace.package]
version = "0.1.0"
authors = ["High Performance Media & Logging Team"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
