[package]
name = "terminal-info-toolkit"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A collection of terminal information query tools"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
