[package]
name = "fulltext_search_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jieba-rs = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
