[package]
name = "local-password-manager"
version = "0.1.0"
description = "本地密码管理器应用"
authors = ["you"]
license = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-all", "http-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
dirs = "5.0"
thiserror = "1.0"
argon2 = { version = "0.5", features = ["std"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
