[package]
name = "session-analyzer"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "会话重组与解析器 - TCP流重组、HTTP/深度解析、十六进制/文本双模式查看、文件提取预览"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
log = "0.4"
base64 = "0.21"
url = "2.5"
percent-encoding = "2.3"
uuid = { version = "1.0", features = ["v4"] }

packet-sniffer = { path = "../packet-sniffer" }
