[package]
name = "security-penetration-suite"
version = "1.0.0"
description = "安全渗透测试工具箱"
authors = ["Security Team"]
edition = "2021"
exclude = ["node_modules", "src", "index.html", "vite.config.*", "package.json", "package-lock.json", "*.config.*"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "http-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
async-trait = "0.1"
thiserror = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
