[package]
name = "system-security-monitor"
version = "0.1.0"
description = "系统安全与监控工具集"
authors = ["you"]
edition = "2021"

[lib]
name = "system_security_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = { version = "0.30", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
rand = { version = "0.8", features = ["std_rng"] }
rand_chacha = "0.3"
argon2 = "0.5"
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
